fix text spacing for login

--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -18,6 +18,7 @@
   .login-form-container h2{
     text-align: center;
     font-size: 2rem;
+    margin-bottom: 10px;
   }  
   .reset-password-link {
     margin-top: -10px;
